<resources>
    <string name="app_name">云智生活</string>
    <string name="title_activity_main">首页</string>
    <string name="title_activity_web_view">公共webView</string>
    <string name="data_loading_massage">数据加载中…</string>
    <string name="data_loading_massage1">信用卡不匹配！如确定信用卡信息无误且为本人持有，请核实身份证与预留手机号！</string>
    <string name="data_loading_massage2">储蓄卡不匹配！如确定储蓄卡信息无误且为本人持有，请核实身份证与预留手机号！</string>
    <string name="title_activity_guide_page_adapter">引导页</string>
    <string name="home_fragment">@string/title_activity_main</string>
    <string name="mine_fragment">我的</string>
    <string name="please_login">请登录，体验完整功能</string>
    <string name="home_date_repayment">@string/date_repayment</string>
    <string name="home_perfect_repayment">@string/perfect_repayment</string>
    <string name="want_upgrade">我要升级</string>
    <string name="financial_services">金融服务</string>
    <string name="domestic_services">生活服务</string>
    <string name="credit_card_knowledge">信用卡知识</string>
    <string name="my_need_net_application">我要网申</string>
    <string name="high_credit_card">高额度卡片 极速版卡</string>
    <string name="want_borrow">我要借贷</string>
    <string name="quickly_arrived">到账迅速 无需等待</string>
    <string name="invite_friends">我要推广</string>
    <string name="you_can_divide">邀请好友 即可分润</string>
    <string name="home_text_online_card">在线办卡</string>
    <string name="home_text_fast_loan">快速借款</string>
    <string name="home_text_card_life">卡生活</string>
    <string name="home_text_have_good_swim_all_way">畅游一路</string>
    <string name="home_text_understanding_all_way_product">了解一路金服产品</string>
    <string name="home_text_good_card_recommendation">好卡推荐</string>
    <string name="home_text_see_more">查看更多</string>
    <string name="home_text_loan_supermarket">贷款超市</string>
    <string name="home_text_maximum_amount">最高额度（元）</string>
    <string name="home_text_monthly_interest_rate"><![CDATA[月利率<font color="#ffc000">%s%%</font>]]></string>
    <string name="home_text_low_rate">低费率</string>
    <string name="home_item_text_reading">%1s&#160;&#160;&#160;&#160;&#160;%2s阅读</string>
    <string name="title_activity_online_application">在线办卡</string>
    <string name="title_activity_online_loan">贷款产品</string>
    <string name="text_online_loan_apply_immediately">立即申请</string>
    <string name="text_card_life_date_repayment">@string/date_repayment</string>
    <string name="text_card_life_perfect_repayment">@string/perfect_repayment</string>
    <string name="text_card_life_custom_repayment">@string/custom_repayment</string>
    <string name="text_card_life_my_business">@string/my_business</string>
    <string name="text_card_life_card_information">卡信息</string>
    <string name="text_card_life_want_upgrade">@string/want_upgrade</string>
    <string name="text_card_life_transaction_record">@string/transaction_record</string>
    <string name="user_referees">推荐人</string>
    <string name="text_upgrade_code">升级码</string>
    <string name="text_card_life_management_award">管理奖</string>
    <string name="hint_upgrade_code">请输入升级码</string>
    <string name="toast_upgrade_code_can_not_empty">升级码不能为空</string>
    <string name="dialog_update_successed">升级成功</string>
    <string name="online_service">在线客服</string>
    <string-array name="list_bank_card">
        <item>信用卡</item>
        <item>储蓄卡</item>
    </string-array>
    <string name="assets">总资产</string>
    <string name="commission">佣金</string>
    <string name="divided">分润</string>
    <string name="my_business">我的商户</string>
    <string name="people">人</string>
    <string name="diamond">钻石</string>
    <string name="title_activity_my_business_total_number_teams">我的团队总人数</string>
    <string name="title_activity_my_business_number_vip_team">团队的VIP数量</string>
    <string name="default_my_business_direct_push_merchants">直推商户</string>
    <string name="default_my_business_push_merchant">间推商户</string>
    <string name="item_adapter_business_level_number_people">%s人</string>
    <string name="title_activity_business_details">商户详情</string>
    <string name="text_referrer">推荐人：%s</string>
    <string name="title_activity_management_award">管理奖</string>
    <string name="text_management_award_number_people">@string/item_adapter_business_level_number_people</string>
    <string name="text_management_award_introduction">直推3个V2或以上级别人数可享受管理奖，可以拿市场内四代收入的2%</string>
    <string name="text_management_award_apply_immediately">@string/text_online_loan_apply_immediately</string>
    <string name="title_activity_login">登录</string>
    <string name="hint_please_enter_phone_number">请输入手机号</string>
    <string name="hint_password">请输入6到12位密码</string>
    <string name="toast_password">@string/hint_password</string>
    <string name="been_sent">已发送</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login_code">验证码登录</string>
    <string name="password_login">密码登录</string>
    <string name="register_now">立刻注册</string>
    <string name="toast_please_ok_enter_phone_number">请输入正确手机号</string>
    <string name="title_activity_registered">注册</string>
    <string name="toast_code_sent_success">验证码发送成功</string>
    <string name="hint_code">请输入验证码</string>
    <string name="toast_please_enter_code">@string/hint_code</string>
    <string name="get_verification_code">获取动态验证码</string>
    <string name="get_verification_code0">我们已向130****8888发送验证码短信\n\n请查看短信并输入验证码</string>
    <string name="get_verification_code1">我们已向</string>
    <string name="get_verification_code2">发送验证码短信\n\n请查看短信并输入验证码</string>
    <string name="resend_code">重新获取验证码</string>
    <string name="next">下一步</string>
    <string name="hint_recommendation_code">推荐码(推荐人手机号)</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="submit_registration">完成注册</string>
    <string name="is_accept_terms">我已仔细阅读并接受</string>
    <string name="application_terms">《申请条款》</string>
    <string name="application_terms1">申请条款</string>
    <string name="toast_please_enter_referral_code">请输入推荐码或推荐人手机号</string>
    <string name="toast_is_accept_terms_application_terms">请仔细阅读并同意申请条款</string>
    <string name="title_activity_retrieve_password">找回密码</string>
    <string name="hint_retrieve_password">设置6–12位密码</string>
    <string name="determine">确定</string>
    <string name="leave_comments">留言</string>
    <string name="title_activity_card_spending">刷卡消费</string>
    <string name="select_aisle">请选择消费类型</string>
    <string name="add_card">选择信用卡</string>
    <string name="amount_consumption">消费金额</string>
    <string name="hint_please_enter_amount_consumption">请输入消费金额</string>
    <string name="single_pen_handling_fee">单笔手续费：</string>
    <string name="handling_fee">手续费：</string>
    <string name="handling_fee1">手续费：0.00元</string>
    <string name="hint_limit">该银行卡：最低%1$s，最高%2$s</string>
    <string name="toast_select_credit_card">请选择信用卡</string>
    <string name="toast_not_channel_available">您暂时没有可用通道</string>
    <string name="hint_unfilled_customer_service">信息未进件,暂时不能使用此功能，若有疑问请联系管理员</string>
    <string name="hint_incoming_failure_customer_service">信息进件失败,暂时不能使用此功能，若有疑问请联系管理员</string>
    <string name="toast_select_aisles">请选择通道</string>
    <string name="toast_input_mount_consumption">请输入金额</string>
    <string name="toast_input_mount_consumption_below_lower_limit">输入金额低于单笔下限</string>
    <string name="toast_input_mount_consumption_below_upper_limit">输入金额高于单笔上限</string>
    <string name="title_activity_card_raising_knowledge">养卡小知识</string>
    <string name="raising_the_card"><b>提额养卡建议：</b>\n\n
        1、刷卡间隔要超过半小时。早上8点之前晚上9点之后，尽量别用小额通道。\n\n
        2、建议每月大额消费占比不要超过90%，消费金额尽量不要是整数。\n\n
        3、每月全额养卡，账单出来的时候先还一点（5%-20%），然后制定养卡计划持续养卡，不要等到最后几天集中养卡。\n\n
        4、每天还进去的钱跟刷出来的钱不能持平，最好差额大一点，间隔一两天再刷，并保留卡额度的5%。
    </string>
    <string name="title_activity_select_bank_card">选择银行</string>
    <string name="title_activity_select_debit_card">选择储蓄卡</string>
    <string name="title_activity_select_credit_card">选择信用卡</string>
    <string name="untied">解绑</string>
    <string name="modify">修改</string>
    <string name="dialog_untied_credit_card_title">是否解绑信用卡</string>
    <string name="dialog_untied_credit_card">解绑信用卡后，该卡相关业务无法使用。</string>
    <string name="dialog_credit_card_untied_success">信用卡解绑成功</string>
    <string name="dialog_successful_modification_billing_date">开始日修改成功</string>
    <string name="dialog_successful_modification_repayment_date">结束日修改成功</string>
    <string name="title_activity_selset_aisle">选择通道</string>
    <string name="title_activity_determining_receipts">确定收款</string>
    <string name="accounts_receivable">收款账户</string>
    <string name="accounts_receivable_name">收款账户名称</string>
    <string name="actual_name">真实姓名</string>
    <string name="peserve_phone">预留手机号</string>
    <string name="online_amount">单笔交易上限：</string>
    <string name="online_amount_number">2100元</string>
    <string name="rate">费率</string>
    <string name="business_type">商户类型：</string>
    <string name="swipe_has_points">有积分</string>
    <string name="swipe_not_points">无积分</string>
    <string name="support_bank_name">支持银行：</string>
    <string name="toast_please_select_payment_account">请选择收款账户</string>
    <string name="dialog_receipt_success">收款成功</string>
    <string name="dialog_receipt_failure">收款失败</string>
    <string name="authentication">身份证认证</string>
    <string name="id_card_front_photo">第一步：请拍摄身份证人像面</string>
    <string name="name">姓名：</string>
    <string name="editable">可编辑</string>
    <string name="not_editable">不可编辑</string>
    <string name="identity_number">身份证号：</string>
    <string name="id_card_reverse_photo">第二步：请拍摄身份证国徽面</string>
    <string name="valid_until">有效期至：</string>
    <string name="dialog_confirm_info_title">请确认姓名和身份证信息无误</string>
    <string name="toast_please_upload_id_card_face">请上传身份证人像面图片</string>
    <string name="toast_please_upload_identification_number">请输入正确身份证号</string>
    <string name="toast_please_upload_id_card_card_reverse">请拍摄身份证国徽面</string>
    <string name="held_identity_card">手持身份证</string>
    <string name="id_card_photo">第三步：请手持身份证拍照</string>
    <string name="qheld_identity_card">上传手持身份证照片\n\n身份证完整，身份证号清晰</string>
    <string name="toast_qheld_identity_card">请上传手持身份证照片</string>
    <string name="bank_card">银行卡</string>
    <string name="debit_card_front_photo">第四步：请拍摄储蓄卡正面照</string>
    <string name="submit_review">提交审核</string>
    <string name="bank_card_name">银行名称</string>
    <string name="hint_editable">可编辑</string>
    <string name="bank_card_number">银行卡号</string>
    <string name="account_opening_area">开户地区</string>
    <string name="select_bank">选择开户行</string>
    <string name="reserve_phone_number">预留手机号</string>
    <string name="bank_reserve_phone_number">银行预留手机号</string>
    <string name="toast_not_supported_this_bank">暂不支持此银行请更换</string>
    <string name="hint_bank_card_number">请输入正确的银行卡号</string>
    <string name="hint_account_opening_area">请选择开户地区</string>
    <string name="hint_please_select_bank">请选择开户行</string>
    <string name="toast_please_phone_number">请输入银行卡预留手机号</string>
    <string name="dialog_improve_info_success">完善信息成功</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_activity_add_debit_card">添加储蓄卡</string>
    <string name="add">确定添加</string>
    <string name="toast_not_account_info_yet">该地区暂不支持此银行</string>
    <string name="title_activity_modify_debit_card">修改储蓄卡</string>
    <string name="hint_old_password">请输入旧密码</string>
    <string name="hint_new_password">请输入6到12位密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="confirm">确认</string>
    <string name="text_withdrawal_application_waiting_processing">提现申请成功，等待处理…</string>
    <string name="text_withdrawal_application_time_arrival">到账时间说明：</string>
    <string name="text_withdrawal_application_time_arrival_content">
        工作日下午16:00之前申请的提现会在当日18:00左右到账，16:00后申请的提现将在下个工作日到账。周末及法定假日提现，将在下个工作日到账。
    </string>
    <string name="btn_carry_out">@string/carry_out</string>
</resources>