<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/dp_10">

            <TextView
                android:id="@+id/tv_authentication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:drawableTop="@mipmap/first"
                android:gravity="center"
                android:text="@string/authentication"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@mipmap/second_active"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/held_identity_card"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@mipmap/third"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/bank_card"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/colorf4f7ff"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/id_card_photo"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_50"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_reverse_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:src="@mipmap/id_card_hand" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    android:text="@string/qheld_identity_card"
                    android:textColor="@color/color_hint" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_held_identity_card_next"
                style="@style/style_login_btn"
                android:text="@string/next" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>