<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical"
    tools:context=".mine.accountManagement.ModifyLoginPwdActivity">

    <include layout="@layout/top_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white">

        <EditText
            android:id="@+id/et_old_password"
            style="@style/style_hint_color_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:background="@null"
            android:drawablePadding="@dimen/dp_5"
            android:maxLength="20"
            android:hint="@string/hint_old_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/dp_5"
            android:text="@string/forget_password"
            android:textColor="@color/colorAccent"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white">

        <EditText
            android:id="@+id/et_new_password"
            style="@style/style_hint_color_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:background="@null"
            android:drawablePadding="@dimen/dp_5"
            android:hint="@string/hint_new_password"
            android:singleLine="true" />
    </RelativeLayout>


    <View style="@style/style_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_50"
        android:background="@color/white">

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/style_hint_color_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:background="@null"
            android:drawablePadding="@dimen/dp_5"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_confirm"
        style="@style/style_login_btn_bg"
        android:enabled="true"
        android:text="@string/confirm" />

</LinearLayout>